--- a/vignettes/c060_vignette.Rnw
+++ b/vignettes/c060_vignette.Rnw
@@ -151,7 +151,7 @@ The $L_1$-penalty has the advantage over the $L_2$-penalty of shrinking some of 
 \subsection{The elastic net}
 \Citet{zou05} introduced the elastic net, which employs a combination of the $L_1$- and $L_2$-penalty
 \begin{equation}\label{enet}
-p_{\lambda^1,\lambda^2}(|\beta_j|)=\lambda^1 | \beta_j | + \lambda^2 \beta_j ^2.
+p_{\lambda_1,\lambda_2}(|\beta_j|)=\lambda_1 | \beta_j | + \lambda_2 \beta_j ^2.
 \end{equation}
 \Citet{zou05} rescale the initial solutions from the optimization of the doubly-penalized log-likelihood function by the factor $1 + \lambda^2$, in order to reduce the effect of the double shrinkage.
 Like lasso the elastic net performs automatic feature selection by setting some coefficient estimates to zero.
@@ -167,22 +167,24 @@ Here, $\alpha \in (0,1]$ determines the influence of the $L_1$ penalty relative 
 \subsubsection{The interval-search algorithm to select the optimal elastic net parameter combination}
 The elastic net penalty function contrains two tuning parameters which are data-dependent and hence cannot be set to some \emph{a priori} values. The challenge is to find a set of tuning parameters $\left(\alpha,\lambda\right)$, for which the k-fold cross-validated loss function of the model is minimal.
 
-\paragraph{Fixed grid}
-Tuning parameters are usually determined by a grid search. The grid search method calculates a target value,
-e.g. the penalized log likelihood deviance, at each point over a fixed grid of parameter values. This method may offer some
-protection against local minima but it is not very efficient. 
-The density of the grid plays a critical role in finding global optima. By increasing the density of the grid, the computation cost increases rapidly with no guarantee of finding global optima. 
-Furthermore, the choice of the fixed grid is highly arbitrary and does guarantee that the algorithm will not get stuck in a local optimum. 
 
 \paragraph{Interval search}
+The standard used fixed grid search has its major disadvantage in the systematic check of the penalized log likelihood deviance in each point of the grid. The grid density affects the accurancy and the time complexity of the algorithm.  Furthermore, the choice of the grid is highly arbitrary and does guarantee that the algorithm will not get stuck in a local optimum. 
+
 \Citet{froehlich2005} proposed an 
 efficient algorithm for finding a global optimum on the tuning parameter space 
 called Efficient Parameter Selection via Global Optimization (EPSGO). The main idea of the algorithm is to treat the task of finding the optimal tuning parameter values as a global optimization problem. For that purpose one learns a Gaussian process model of the loss function surface in parameter space and samples systematically at points where the so-called expected improvement criterion reaches the maximum. 
 
-The interval search can be divided into two phases. In the initial phase, a set of uniformly distributed points is randomly selected throughout the parameter space. Then, in the iteration phase, the algorithm learns the Gaussian process model from the points which have already been visited. By adding new points one updates the Gaussian process model.
-New points in the parameter space are sampled by using the expected improvement criterion as described by \citet{Jones1998}, {\red which avoids getting stuck in local minima - How? Is this guaranteed? If not rephrase}. The EPSGO algorithm stops when the global optimum is achieved.
 
-One can observe an immense improvement in the training time for the Gaussian process model compared to that of the {\red underlying classification and regression tasks - Should we not compare with grid search here? The underlying task is finding the optimal tuning parameter values, not the classification task itself} \citep{froehlich2005}. This is because the number of training points for the Gaussian process (and hence the number of evaluations of the loss function surface of the regression model) mainly depends on the dimensionality of the parameter space, which is very small compared to the {\red number of training points for the regression model - Again: should we not compare with the number of training points = evaluated tuning parameter compbinations used in the grid search?}. 
+The interval search can be divided into two phases. In the initial phase, a set of uniformly distributed points is randomly selected throughout the parameter space. Then, in the iteration phase, the algorithm learns the Gaussian process model from the points which have already been visited. By adding new points one updates the Gaussian process model.
+New points in the parameter space are sampled by using the expected improvement criterion as described by \citet{Jones1998}. The EPSGO algorithm stops when one of the stopping criteria is met. 
+The stopping criteria is either convergence of the algorithm or no change of the optimum during the last ten iterations. THe EPSGO algorithm has been implemented in a R package \pkg{penalizedSVM} \citet{becker2009}.
+
+
+\Citet{froehlich2005} showed that the algorithm is robust against local minima. 
+One can observe an immense improvement in the training time for the Gaussian process model compared to that of the underlying regression task \citep{froehlich2005}. This is because the number of training points for the Gaussian process (and hence the number of evaluations of the loss function surface of the regression model) mainly depends on the dimensionality of the parameter space, which is very small compared to the number of training points on the grid for the regression model.
+
+Summing up,  the EPSGO algorithm provides two main advantages: robustness against local minima and time improvement in comparison to a dense grid search.
 
 \subsection{Stability selection}
 The penalized regression models that we have described above are typically used to find sparse models with good predictive performance. In contrast, the stability selection proposed by \citet{MeinshausenBuehlmann2010} aims to find stable features which show strong association with the outcome. 
@@ -448,163 +450,108 @@ In the previous sections we have seen that the lasso-penalized Cox model does no
 
 In this section we try to fit an elastic net model instead of lasso to the same data set. As outlined above, fitting an elastic net model require the simultaneous tuning of two parameters $\alpha$ and $\lambda$. For this computationally challenging task, we provide an efficient implementation in \proglang{R} function \code{EPSGO} using the interval search algorithm.
 
-<<interval_search_cox_setup, echo=T, results=hide>>=  
-  x <- t(exprs(eset))
-  y <- cbind(time=pData(geo_exprs_data)$os,status=pData(geo_exprs_data)$os_status)
-  
-  Q.func <- "tune.glmnet.interval"
-  
-  # bounds for alpha [0,1]
-  bounds <- t(data.frame(alpha=c(0, 1)))
-  colnames(bounds) <- c("lower", "upper")  
-  parms.coding <- "none"
-  seed <- 1234
-  type.measure <- 'deviance'
-    
-  family <- "cox"
-  nfolds <- 10
-  show <- "none"
-  fminlower <- -100  
-  type.min <- "lambda.1se"
-  verbose <- TRUE
-@
-The task is to find a setting of tuning parameter values $\left(\alpha,\lambda\right)$, for which the \Sexpr{nfolds}-fold cross-validated penalized (partial) log likelihood function of the model is minimal. The parameter space of tuning parameters is defined as follows:
+
+The task is to find a setting of tuning parameter values $\left(\alpha,\lambda\right)$, for which the \Sexpr{nfolds}-fold cross-validated penalized (partial) log likelihood function of the model is minimal.  The wrapper function \code{tune.glmnet.interval} calculates partial log likelihood deviance of a model with given tuning parameter setting $\left(\alpha,\lambda\right)$. The parameter space of tuning parameters is defined as follows:
 
 <<interval_search_cox_pre, echo=F>>=
 print(bounds)
 @
 
+
 The second tuning parameter $\lambda>0$ will be found for each given $\alpha$ via the computation of the entire regularization path with the \pkg{glmnet} function. The two-dimensional parameter space has the form $\left(0, 1\right) \times \mathbb{R}_+$. %The seed is \Sexpr{seed}.
 For each given $\alpha$ an optimal $\lambda$ is defined as the largest value of $\lambda$ such that the loss function value is within one standard error of the minimum.
 
-<<interval_search_cox, echo=T, results=hide, cache=TRUE>>=
+
+<<interval_search_cox, echo=FALSE, results=hide>>=
+if (file.exists(".Rdata/fit_interval_search.RData")) {
+    load(".Rdata/fit_interval_search.RData") 
+} else {
+  x <- t(exprs(eset))
+  y <- cbind(time=pData(geo_exprs_data)$os,status=pData(geo_exprs_data)$os_status)
+
+  # bounds for alpha [0,1]
+  bounds <- t(data.frame(alpha=c(0, 1)))
+  colnames(bounds) <- c("lower", "upper")  
+  
+  nfolds = 10
   # fix folds for each model
   set.seed(seed)
   foldid <- my.balanced.folds(class.column.factor=y[,2], cross.outer=nfolds)
   
   print("start interval search")
-  fit <- EPSGO(Q.func, 
+  fit <- EPSGO(Q.func="tune.glmnet.interval", 
              bounds=bounds, 
-             parms.coding=parms.coding, 
-             show=show, N=NULL,   
-             seed=seed, 
-             fminlower=fminlower,
+             parms.coding="none", 
+             show = "none", 
+             N = NULL,   
+             seed = 1234, 
+             fminlower = -100,
              # Q.func arguments
-             x=x, y=y, family=family, 
-             #nfolds=nfolds,  
-             foldid=foldid,
-             type.min=type.min,
-             type.measure=type.measure,
-             verbose=verbose)
-  names(fit) 
+        		 x = x, y = y, family = "cox", 
+             foldid = foldid,
+             type.min = "lambda.1se",
+             type.measure = "deviance",
+             verbose = TRUE)
  
-  print("chose the model with min num of FS ")      
-  print("# FS: ")
-  sel.models <- sapply(fit$model.list, "[", "model") [fit$Ytrain == fit$fmin ]
-  sel.alpha <- fit$xmin
-  sel.error <- fit$fmin    
-  		
-  out <- list(model=sel.models, alpha=sel.alpha, error=sel.error) 
-  save(fit, out, file="Rdata/fit_interval_search.RData") 
+  save(fit,  file=".Rdata/fit_interval_search.RData") 
+}  
 @
 
-<<interval_search_cox_extract, echo=T, results=hide>>=
-# 
-alphas <- fit$Xtrain[,1]
-lambdas <- unlist(sapply(sapply(fit$model, "[", "model"), "[", "lambda"))
-deviances <- fit$Ytrain
-# round problems!!!! take first from the fit 
-# number of selected features in the models; dfs
-tmp.models<-sapply(sapply(sapply(fit$model, "[", "model"), "[", "cvreg"), "[", "glmnet.fit")
-
-n.features<-mapply( function(List, lam) List$df[which(List$lambda %in% lam)], tmp.models, lambdas)
-             
-opt.alpha <- out$alpha
-opt.lambda <- out$model[[1]]$lambda
-
-summary_int_search <- as.data.frame(cbind(alpha=alphas,lambda=lambdas,deviance=deviances,n.features=n.features))
-rownames(summary_int_search) <- c(1:nrow(summary_int_search))
+<<interval_search_cox_show, echo=TRUE, results=hide,eval=FALSE>>=
+  fit <- EPSGO(Q.func="tune.glmnet.interval", 
+             bounds=bounds, 
+             parms.coding="none", 
+             seed = 1234, 
+             fminlower = -100,
+             # Q.func arguments
+          	 x = x, y = y, family = "cox", 
+             foldid = foldid,
+             type.min = "lambda.1se",
+             type.measure = "deviance")
 @
 
-At the initial step we sample 21 points in the parameter space, Those points are randomly distributed and uniformly cover the whole interval. A Gaussian process model is trained based on these initial points. Then,iteratively, new points are added to the Gaussian process model in order to find an optimal combination of tuning parameter values. In total, \Sexpr{nrow(summary_int_search)} iterations were needed to reach the optimum. 
+
+<<interval_search_cox_extract, echo=TRUE, results=hide>>=
+summary.int<-summary.int.search(fit,verbose=TRUE)
+@
+
+At the initial step we sample 21 points in the parameter space, Those points are randomly distributed and uniformly cover the whole interval [0,1]. A Gaussian process model is trained based on these initial points. Then,iteratively, new points are added to the Gaussian process model in order to find an optimal combination of tuning parameter values. In total, \Sexpr{nrow(summary.int)} iterations were needed to reach the optimum. 
 
 %<<label=tab_int_search1, echo=FALSE, results=tex>>=                             
-%toPrint <- xtable(summary_int_search[1:5,], caption = "Summary of five intial points in the parameter space", label = "tab:sum_int_search1", digits = c(0,5, 7, 5, 0))
+%toPrint <- xtable(summary.int[1:5,], caption = "Summary of five intial points in the parameter space", label = "tab:sum_int_search1", digits = c(0,5, 7, 5, 0))
 %print(toPrint, table.placement = "tbp", caption.placement = "top")
 %@
 %The first five initial 'visited' points in the parameter space ($\alpha$, $\lambda$)  with corresponding cross-validated deviance and number of selected features in each model are presented in Table~\ref{tab:sum_int_search1}.
 
 %<<label=tab_int_search2, echo=FALSE, results=tex>>=                             
-%toPrint <- xtable(summary_int_search[22:31,], caption = "Summary of visited points in the parameter space", label = "tab:sum_int_search2", digits = c(0,5, 7, 5, 0))
+%toPrint <- xtable(summary.int[22:31,], caption = "Summary of visited points in the parameter space", label = "tab:sum_int_search2", digits = c(0,5, 7, 5, 0))
 %print(toPrint, table.placement = "tbp", caption.placement = "top")
 %@
 
 %The next section of the summary table shows ten 'visited' points, which are chosen in iteration steps (Table~\ref{tab:sum_int_search2}).
 %The minimal mean cross-validated deviance over the folds of \Sexpr{round(out$error,3)} was reached for optimal parameter pair $(\alpha, \lambda ) $ = (\Sexpr{round(opt.alpha,3)},\Sexpr{round(opt.lambda,3)}). 
 
+
 <<interval_search_cox_fit_opt, echo=F, results=hide>>=
 #select the model with optimal parameters from the object fit
-# 
-f <- fit$model.list[unlist(sapply(fit$model.list,"[",1)) == fit$fmin]
-if (length(f)>1) print("more than one optimal model!")
-#take the first model
-f1 <- f[[1]]$model$cvreg
-res<-f1$glmnet.fit
-cof <- coef(res, s=opt.lambda)
-names.cof <- rownames(cof)
-cofn <- cof[which(cof!=0)]
-names(cofn) <- names.cof[which(cof!=0)] 
-bet <- res$beta[match(names(cofn), rownames(res$beta)),]
+#
+opt.model<-summary.int$opt.model[[1]]
+cofn<-.get.cofn(opt.model)
 @
 
 The final elastic net model contains \Sexpr{length(cofn)} selected features, which obviously reflects much less sparsity than the final lasso model.
-<<interval_search_cox_summary>>=
-summary(cofn)
-head(sort(cofn))
-tail(sort(cofn))
-@
 
 The results are consistent in the sense, that the features contained in the final lasso model are also contained in the elastic net model. Also, the individual feature selected by the stability algorithm is in the set of selected elastic net features.
-<<interval_search_cox_check_overlap_stability>>=
-names(cofn.lasso) %in% names.cof
-'206932_at' %in% names.cof
+<<interval_search_cox_check_overlap_stability,echo=FALSE,results='hide'>>=
+names(cofn.lasso) %in% names(cofn)
+'206932_at' %in% names(cofn)
 @
 
 \begin{figure}
 <<interval_search_cox_out_plot1, echo=F, results=hide, fig=TRUE,height=8,width=8>>=
- 
-# breaks <- do.breaks(range(summary_int_search$deviance), 20)
-# n_init <- 20 # number of initial alpha values at iteration zero
-# summary_int_search$cols <- level.colors(summary_int_search$deviance,at=breaks, col.regions = cm.colors(n=20,alpha=0.5))
-# print(xyplot(alpha ~ lambda, data = summary_int_search, groups = cols, cex = 2, col = "black",   jitter.y=T, amount=0.01,
-#              scales=list(x=list(log=T, equispaced.log = FALSE)), # x axis on log-scale
-#              panel = function(x, y, groups, ..., subscripts) { 
-#              fill <- groups[subscripts] 
-#              panel.grid(h = -1, v = -1)
-#              panel.xyplot(x, y, pch = rep(c(22,21),c(n_init,nrow(summary_int_search)-n_init)), fill = fill, ...) ;
-#              ltext(x=x, y=y, labels=n.features, pos=ifelse(y<0.1,3,4), offset=3, cex=0.75,col=4)},
-#              legend = list(top = list(fun = draw.colorkey, args = list(key = list(space = "top", col = cm.colors(n=20,alpha=0.5), at = breaks), draw = FALSE))),
-#              main="cross-validated model deviance",sub="number of selected features are given in blue \n rectangles show initial alpha values"))
-
-summary_int_search$log_lambda <- log(summary_int_search$lambda)
-breaks                        <- do.breaks(range(summary_int_search$deviance), 20)
-n_init                        <- 21 # number of initial alpha values at iteration zero
-summary_int_search$cols       <- level.colors(summary_int_search$deviance,at=breaks, col.regions = gray.colors)
-
-print(xyplot(log_lambda~alpha, data = summary_int_search, groups = cols, cex = 2, col = "black",  
-             jitter.y=T, amount=0.01, ylab=expression(paste("log ",lambda)),xlab=expression(alpha),
-#             scales=list(x=list(log=T, equispaced.log = FALSE)), # x axis on log-scale
-             panel = function(x, y, groups, ..., subscripts) { 
-             fill <- groups[subscripts] 
-             panel.grid(h = -1, v = -1)
-             panel.xyplot(x, y, pch = rep(c(22,21),c(n_init,nrow(summary_int_search)-n_init)), fill = fill, ...) ;
-             ltext(x=x, y=y, labels=n.features, pos=ifelse(y<0.1,3,4), offset=3, cex=1,col=1)},
-             legend = list(top = list(fun = draw.colorkey, args = list(key = list(space = "top", col = gray.colors, at = breaks), draw = FALSE))),
-             main="Cross-validated partial log likelihood deviance",
-             #sub="number of selected features are printed next to symbol \n rectangles show initial alpha values"
-             ))
+plot.summary.int.search(summary.int)
 @
-\caption{\label{fig:interval_search1} Partial log likelihood deviance as a function of both tuning parameters $\alpha$ and log$\lambda$ when fitting the elastic net Cox model for the AML data set. For each evaluated point in the parameter space the number of selected features in the corresponding model is printed next to the data point symbol. Rectangles correspond to initially selected $\alpha$ values.}
+\caption{\label{fig:interval_search1} Partial log likelihood deviance as a function of both tuning parameters $\alpha$ and log$\lambda$ when fitting the elastic net Cox model for the AML data set. For each evaluated point in the parameter space the number of selected features in the corresponding model is printed next to the data point symbol. Rectangles correspond to initially selected $\alpha$ values. The dashed red lines highlight the optimal point with minimal partial log likelihood deviance. }
 \end{figure}
 
 Figure~\ref{fig:interval_search1} illustrates the relationship between both tuning parameters $\alpha$ and $\lambda$ for the 'visited' points. The partial log likelihood deviance is  color-coded with black for small values and gray for large values. 
@@ -615,11 +562,7 @@ This plot shows nicely that the interval search algorithm does not sequentially 
 
 \begin{figure}
 <<interval_search_cox_out_plot2, echo=F, results=hide, fig=TRUE,height=8,width=8>>=
-niter<-nrow(summary_int_search) - 21
-iter<-c(rep(0,21), c(1:niter))
-plot(summary_int_search$alpha, iter, xlab=expression(alpha), ylab="Iteration")
-grid(NA, niter+1, lwd=2)
-abline(v=opt.alpha, col="red")
+plot.points.int.search(summary.int ) 
 @
 \caption{\label{fig:interval_search2} The distribution of initial and visited points of the interval search plotted in chronological order. The interval search is employed to identify the optimal parameter value combination ($\alpha$,$\lambda$) for the elastic net Cox model fitted to the AML data set.}
 \end{figure}
